    * `db`
        * `-usessl -ssl`
        * `-rdb ~@{rdbname}`
        * clarify schema vs database
    * `gensh` now by default noglobs the arguments passed to it, `glob` keyword if globbing desired
    `include` `-if` `-!if` conditional inclusion
* Documentation
    * `db` clarify schema vs database
* Examples
	* Test
		* `testdbrepl.ublu` example of db table replication
                * Suite
                    * `t.db.ublu` test database
* Extensions
    * `ux.utils.ublu` compilation utils
    * `ux.jlsc.ublu` job list selection criteria
    * `ux.job.ublu` jobs
* Miscellaneous
    * Ublu now by default compiles in Microsoft MSSQL [TM] support.
        * The MSSQL JDBC driver is not included in the distribution.

1.2.0 2018-10-07
-----
* Commands
    * `jvm` -set -get manipulate Java System properties
    * `server` now does SSL
    * `sock` now does SSL sockets
    * `watson` command added
    * `db`
        * better support for TableReplicator `-destqopt` `-destport`
        * `-star` changed to work like other queries w/r/t concurrency and holdability.
        * stub for mssql support updated on user bug report
    * `desktop`
        * `-supported` was missing
    * `list`
    	* `-len` same as `-size`
    	* `-src` same as `-source`
    * `programcall`
    	* bug fixes
    * `splfol`
        * bug fixes
        * rendering
* Examples
    * `endJobName.ublu` ends first instance of a job by name
    * `spooledFileOpenListUser.ublu` list spooled files for a user with info
    * `readSSLWebIndexPage` make https connection and read the index page
    * `SSLServerTest` runs the Ublu server with SSL
    * `testprogramcall.ublu` calls an RPGLE program and returns params
        * see `share/rpgle/dateParm.txt` for RPGLE source for testprogramcall.ublu 
    * `user_auth_lists` gets interesting auth info about user profiles
* Extensions
    * `ux.string.ublu`
    * `ux.printobj.ublu`
        * extended with functions for spooled files
    * `ux.user.ublu`